src/flake8_unused_arguments/snapshots/ruff__flake8_unused_arguments__tests__ARG001_ARG.py.snap
---
source: src/flake8_unused_arguments/mod.rs
expression: checks
---
- kind:
    UnusedFunctionArgument: self
  location:
    row: 9
    column: 6
  end_location:
    row: 9
    column: 10
  fix: ~
- kind:
    UnusedFunctionArgument: x
  location:
    row: 9
    column: 12
  end_location:
    row: 9
    column: 13
  fix: ~
- kind:
    UnusedFunctionArgument: cls
  location:
    row: 13
    column: 6
  end_location:
    row: 13
    column: 9
  fix: ~
- kind:
    UnusedFunctionArgument: x
  location:
    row: 13
    column: 11
  end_location:
    row: 13
    column: 12
  fix: ~
- kind:
    UnusedFunctionArgument: self
  location:
    row: 17
    column: 6
  end_location:
    row: 17
    column: 10
  fix: ~
- kind:
    UnusedFunctionArgument: x
  location:
    row: 17
    column: 12
  end_location:
    row: 17
    column: 13
  fix: ~
- kind:
    UnusedFunctionArgument: cls
  location:
    row: 21
    column: 6
  end_location:
    row: 21
    column: 9
  fix: ~
- kind:
    UnusedFunctionArgument: x
  location:
    row: 21
    column: 11
  end_location:
    row: 21
    column: 12
  fix: ~

