src/flake8_unused_arguments/snapshots/ruff__flake8_unused_arguments__tests__ARG003_ARG.py.snap
---
source: src/flake8_unused_arguments/mod.rs
expression: checks
---
- kind:
    UnusedClassMethodArgument: x
  location:
    row: 45
    column: 15
  end_location:
    row: 45
    column: 16
  fix: ~

