src/flake8_unused_arguments/snapshots/ruff__flake8_unused_arguments__tests__ARG004_ARG.py.snap
---
source: src/flake8_unused_arguments/mod.rs
expression: checks
---
- kind:
    UnusedStaticMethodArgument: cls
  location:
    row: 49
    column: 10
  end_location:
    row: 49
    column: 13
  fix: ~
- kind:
    UnusedStaticMethodArgument: x
  location:
    row: 49
    column: 15
  end_location:
    row: 49
    column: 16
  fix: ~
- kind:
    UnusedStaticMethodArgument: x
  location:
    row: 53
    column: 10
  end_location:
    row: 53
    column: 11
  fix: ~

