src/flake8_unused_arguments/snapshots/ruff__flake8_unused_arguments__tests__ARG005_ARG.py.snap
---
source: src/flake8_unused_arguments/mod.rs
expression: checks
---
- kind:
    UnusedLambdaArgument: x
  location:
    row: 28
    column: 7
  end_location:
    row: 28
    column: 8
  fix: ~
  parent: ~

